# sherlockbench-client

./: README-inv-vs-dv-random.md  README-inv-vs-dv.md  README-random-inv.md  README-standardized-dv-random.md  README-standardized-inv.md  README.md  setup.cfg
alembic/versions/: 00824034aeaa_add_events_log.py
src/sherlockbench_anthropic/: investigate_decide_verify.py  investigate_verify.py  main.py  prompts.py  verify.py
src/sherlockbench_client/: __init__.py  examples.py  main.py  queries.py  run_api.py  run_internal.py  run_utils.py
src/sherlockbench_commands/: summarize_attempts.py
src/sherlockbench_deepseek/: investigate_decide_verify.py  investigate_verify.py  main.py  prompts.py  verify.py
src/sherlockbench_fireworks/: investigate_decide_verify.py  investigate_verify.py  main.py  prompts.py  utility.py  verify.py
src/sherlockbench_google/: investigate.py  investigate_decide_verify.py  investigate_verify.py  main.py  prompts.py  verify.py
src/sherlockbench_moonshot/: investigate_decide_verify.py  investigate_verify.py  main.py  prompts.py  verify.py
src/sherlockbench_openai/: __init__.py  investigate.py  investigate_decide_verify.py  investigate_verify.py  main.py  prompts.py  verify.py
src/sherlockbench_xai/: investigate_decide_verify.py  main.py  prompts.py  verify.py
