[metadata]
name = sherlockbench-client
version = 0.1

[options]
package_dir=
    =src
packages = find:
install_requires =
    alembic >= 1.15.2
    toolz >= 1.0.0
    openai >= 1.69.0
    requests >= 2.32.3
    PyYAML >= 6.0.2
    psycopg2-binary >= 2.9.10
    PyPika >= 0.48.9
    anthropic >= 0.49.0
    google-genai >= 1.8.0
    filelock >= 3.18.0

[options.extras_require]
dev = 
    pytest >= 8.3.5

[options.entry_points]
console_scripts = 
    sherlockbench_openai_2p = sherlockbench_openai.main:two_phase
    sherlockbench_openai_3p = sherlockbench_openai.main:three_phase
    sherlockbench_google_2p = sherlockbench_google.main:two_phase
    sherlockbench_google_3p = sherlockbench_google.main:three_phase
    sherlockbench_xai_2p    = sherlockbench_xai.main:two_phase
    sherlockbench_xai_3p    = sherlockbench_xai.main:three_phase
    sherlockbench_anthropic = sherlockbench_anthropic.main:main
    sherlockbench_fireworks = sherlockbench_fireworks.main:main
    sherlockbench_deepseek  = sherlockbench_deepseek.main:main
    label                   = sherlockbench_commands.label:main
    summarize_attempts      = sherlockbench_commands.summarize_attempts:main
    print_tool_calls        = sherlockbench_commands.print_tool_calls:main
